# semantic-tagger

./: .gitignore  CITATION.cff  README.md  environment copy.yml  environment---ori.yml  environment-old.yml  environment.yml  jupyter_notebook_config.py  outputtagged_texts.csv  pyproject.toml  semantic_tagger.ipynb  semantic_tagger.py  semantic_tagger_en.ipynb  semantic_tagger_en.py  tagged_text_0_to_10.xlsx  tagged_text_0_to_50.xlsx  test.pkl
.ipynb_checkpoints/: semantic_tagger-checkpoint.ipynb  semantic_tagger_en-checkpoint.ipynb  semantic_tagger_en-checkpoint.py  try_joblib_spacy-checkpoint.ipynb
.jupyter/: jupyter_notebook_config.py
archive/: semantic_tagger_en_without_mwe.ipynb  semantic_tagger_en_without_mwe.py
semantic_tagger/: __init__.py
semantic_tagger/en/: semantic_tagger_en.py
