[tool.poetry]
name = "semantic-tagger"
version = "0.1.0"
description = "Python Multilingual Ucrel Semantic Analysis System, is a rule based token and Multi Word Expression (MWE) semantic tagger."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "semantic_tagger"}]

[tool.poetry.dependencies]
python = ">3.8, <3.10"
spacy = "^3.4.1"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl" }
en-dual-none-contextual = { url = "https://github.com/UCREL/pymusas-models/releases/download/en_dual_none_contextual-0.3.2/en_dual_none_contextual-0.3.2-py3-none-any.whl" }
en-single-none-contextual = { url = "https://github.com/UCREL/pymusas-models/releases/download/en_single_none_contextual-0.3.1/en_single_none_contextual-0.3.1-py3-none-any.whl" }
pandas = ">1.4, <2.0"
openpyxl = "^3.0.9"
nltk = "^3.7"
ipywidgets = "7.7.3"
pyarrow = "^8.0.0"
matplotlib = "^3.5"
pyexcelerate = "^0.10.0"
#urllib3 = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
